# arb

./: .gitmodules  Cargo.toml  README.md  SPEC.md  build.rs
.github/workflows/: ci.yml  pages.yml  release.yml
completions/: _arb
docs/: hud-theme.js  index.html  reference.html  report.html
examples/: disk-usage.arb  error-rate.arb  http-status.arb  json-latency.arb  top-talkers.arb  word-freq.arb
man/man1/: arb.1  arball.1
src/: actor.rs  ast.rs  banner.rs  cache.rs  dap.rs  err.rs  expr.rs  jq.rs  lexer.rs  lib.rs  lsp.rs  main.rs  parser.rs  pkg.rs  pty.rs  query.rs  repl.rs  rust_ffi.rs  serve.rs  sniff.rs  spec.rs  stream.rs  testrun.rs  theme.rs  tui.rs  web.rs  xpath.rs
stdlib/: activemq.arb  ansible.arb  apache.arb  arangodb.arb  argocd.arb  aws.arb  azure.arb  beanstalkd.arb  btrfs.arb  buildah.arb  buildkite.arb  caddy.arb  cassandra.arb  cdk.arb  celery.arb  chef.arb  cilium.arb  circleci.arb  clickhouse.arb  cloudformation.arb  cockroachdb.arb  collectd.arb  concourse.arb  conntrack.arb  consul.arb  containerd.arb  couchdb.arb  crictl.arb  curl.arb  datadog.arb  dgraph.arb  dig.arb  dmesg.arb  docker.arb  doctl.arb  drone.arb  duckdb.arb  dynamodb.arb  elasticsearch.arb  envoy.arb  (+112 more)
tests/: dap.rs  examples.rs  expr.rs  ffi.rs  filter.rs  lsp.rs  pkg.rs  query.rs  spec.rs
