# Published to crates.io as `arblang` (the name `arb` is taken); the binary and
# library are still `arb` (see [[bin]]/[lib] below) so the command you pipe into
# stays `arb`.
[package]
name = "arblang"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Visualize and modify Unix pipelines: pipe a stream in, arb spawns a dynamic TUI."
repository = "https://github.com/MenkeTechnologies/arb"
readme = "README.md"
keywords = ["tui", "pipeline", "unix", "dashboard", "stream"]
categories = ["command-line-utilities"]

[lib]
name = "arb"
path = "src/lib.rs"

[[bin]]
name = "arb"
path = "src/main.rs"

[dependencies]
# arb's computational core executes on fusevm: expressions lower to a
# fusevm::Chunk and run on the VM, with the three-tier Cranelift JIT for hot
# chunks. Same engine as the sibling frontends (zshrs/stryke/rubyrs/…).
fusevm = { version = "0.14.10", features = ["jit"] }
ratatui = "0.29"
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde_json = "1"

[profile.release]
lto = true
strip = true
